fix: [SRM-10788]: Fix UI layout issues (#9380)
* fix: [SRM-10788]: Fix UI layout issues

* fix: [SRM-10788]: Update CSS value

--- a/src/modules/35-connectors/components/CreateConnector/PrometheusConnector/CreatePrometheusConnector.module.scss
+++ b/src/modules/35-connectors/components/CreateConnector/PrometheusConnector/CreatePrometheusConnector.module.scss
@@ -7,7 +7,7 @@
 
 .credentials {
   .form {
-    width: 60%;
+    width: 100%;
   }
 }
 
