--- a/src/modules/85-cv/pages/health-source/connectors/MonitoredServiceConnector.module.scss
+++ b/src/modules/85-cv/pages/health-source/connectors/MonitoredServiceConnector.module.scss
@@ -13,7 +13,6 @@
   width: 400px;
   display: grid;
   grid-template-columns: auto auto auto;
-  margin-left: var(--spacing-xxxlarge) !important;
 }
 
 .formFullheight {
